# Trials

./: .gitignore  Trials.sln
Trials/: CMakeLists.txt  Client.cpp  Client.h  Constants.h  DataHeader.cpp  DataHeader.h  FrameBuffer.cpp  FrameBuffer.h  HeapObjectPool.cpp  HeapObjectPool.h  Main.cpp  Main.h  Main.h.in  Main.hpp  PacketSerializer.cpp  PacketSerializer.h  Proxy.cpp  Proxy.h  Server.cpp  Server.h  Session.cpp  Session.h  Trials.vcxproj  Trials.vcxproj.filters  resource.h  vecadd.cl
Trials_UnitTest/: Trials_UnitTest.cpp  Trials_UnitTest.vcxproj  Trials_UnitTest.vcxproj.filters
